--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/inter": "^5.1.0",
     "@mui/icons-material": "^6.1.2",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.2",
     "@mui/styled-engine-sc": "^6.1.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,8 +25,9 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "styled-components": "^6.1.13",
-    "typescript": "^4.9.5",
+    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.13",
     "ajv": "^8.17.1"
   }
 }
