--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "build": "^0.1.4",
     "components": "^0.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -27,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.4",
     "typescript": "^5.6.3",
     "web-vitals": "^2.1.4"
   },
